--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://vinny1234:vinny1234@myproject.pusws.mongodb.net/ProShop?retryWrites=true&w=majority
+
+JWT_SECRET = abc123
